First acceptance test implemeted.

--- a/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
+++ b/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Views.cs" />
+    <Compile Include="AutomationIds.cs" />
+    <Compile Include="AppViews.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
