Partial Acceptance test fix. TitleResolver.

--- a/src/WindowsParty.App.Components/WindowsParty.App.Components.csproj
+++ b/src/WindowsParty.App.Components/WindowsParty.App.Components.csproj
@@ -48,7 +48,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApplicationContentControl.cs">
+    <Compile Include="Controls\ApplicationContentControl.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -76,9 +76,7 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
