--- a/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
+++ b/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="AutomationIds.cs" />
     <Compile Include="AppViews.cs" />
+    <Compile Include="Communication\Authenticator.cs" />
+    <Compile Include="Communication\IAuthenticator.cs" />
     <Compile Include="Domain\ServerDto.cs" />
     <Compile Include="Navigation\INavigator.cs" />
     <Compile Include="Navigation\ITitleResolver.cs" />
