--- a/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
+++ b/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
@@ -30,8 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Prism.Wpf">
       <HintPath>..\..\packages\Prism.Wpf.6.2.0\lib\net45\Prism.Wpf.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RestSharp.105.2.3\lib\net452\RestSharp.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,6 +53,7 @@
   <ItemGroup>
     <Compile Include="AutomationIds.cs" />
     <Compile Include="AppViews.cs" />
+    <Compile Include="Communication\AuthenticationResponse.cs" />
     <Compile Include="Communication\Authenticator.cs" />
     <Compile Include="Communication\IAuthenticator.cs" />
     <Compile Include="Domain\ServerDto.cs" />
@@ -54,6 +63,9 @@
     <Compile Include="Navigation\TitleResolver.cs" />
     <Compile Include="Regions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
