--- a/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
+++ b/src/WindowsParty.Infrastructure/WindowsParty.Infrastructure.csproj
@@ -53,10 +53,12 @@
   <ItemGroup>
     <Compile Include="AutomationIds.cs" />
     <Compile Include="AppViews.cs" />
-    <Compile Include="Communication\AuthenticationResponse.cs" />
+    <Compile Include="Domain\AuthenticationResponse.cs" />
     <Compile Include="Communication\Authenticator.cs" />
     <Compile Include="Communication\IAuthenticator.cs" />
-    <Compile Include="Domain\ServerDto.cs" />
+    <Compile Include="Communication\IServerListProvider.cs" />
+    <Compile Include="Communication\ServerListProvider.cs" />
+    <Compile Include="Domain\Server.cs" />
     <Compile Include="Navigation\INavigator.cs" />
     <Compile Include="Navigation\ITitleResolver.cs" />
     <Compile Include="Navigation\Navigator.cs" />
