--- a/tests/WindowsParty.App.Ui.Tests/WindowsParty.App.Ui.Tests.csproj
+++ b/tests/WindowsParty.App.Ui.Tests/WindowsParty.App.Ui.Tests.csproj
@@ -61,7 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationExtensions.cs" />
-    <Compile Include="LoginViewTests.cs" />
+    <Compile Include="UiTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\LoginView.cs" />
     <Compile Include="Views\ServersView.cs" />
